--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel='icon' href="/favicon.ico" />
     <script src="./script.js" defer></script>
-    <title>the minimalist</title>
+    <title>aniket agarwal</title>
 </head>
 
 <body>
